# ReportFindingRefiner

./: .dockerignore  .gitignore  LICENSE  README.md  TODO.md  dockerfile  env.example  hello.py  pull-llama3.sh  pyproject.toml
data/lancedb/findings/findings.lance/_transactions/: 0-f85d30fd-fe0f-4d7c-a1ed-60c439188495.txn  1-a5af66cd-11bd-4738-973d-8903b34c8711.txn  2-0aab1b7b-1d19-4c24-9a67-f257174f6fe3.txn  3-0d25b556-01c4-41fd-b695-08f91fbfa8c1.txn  4-4bb20c69-b034-446e-b75d-6eee6697bbfe.txn
data/lancedb/findings/findings.lance/data/: 494b77bd-cb62-4de7-8083-7cf494fef13e.lance  533eb4b0-9c64-49c3-8aaa-a53c25f61ae4.lance  fa5beb99-39c3-4981-ad3b-676458749f26.lance
data/lancedb/reports.lance/_transactions/: 0-aeb71551-861c-45f2-be03-75ad03db2b8b.txn  1-6cac909e-8e7c-466b-b8d4-9c97c3d2b36c.txn  2-d9776ffa-b45b-4afc-8710-d5f89b5e5ee1.txn
data/lancedb/reports.lance/data/: 22ba7176-b732-4b6d-b442-61abcbde6c40.lance
data/lancedb/table.lance/_indices/ad3bcf0b-8dfe-4bee-b53c-683b517b3afe/: docs.lance  invert.lance  tokens.lance
data/lancedb/table.lance/_indices/be95c3a5-f3d9-4095-b54a-cbb2b10d9bcd/: docs.lance  invert.lance  tokens.lance
data/lancedb/table.lance/_transactions/: 0-4c3b871e-e840-4d8f-8d40-c8f64cc03c0a.txn  1-f45f7958-6fa8-4201-b643-96852138d0b3.txn  2-9e2892b5-f32b-4c48-8f58-2290ddefb58f.txn  3-a65f8871-abbd-4ed4-abbb-fb6fb7f6009a.txn  4-e9fc12cd-2e8b-4980-afa8-549f6561c52a.txn  5-72fb1719-aec0-4154-9269-9a3d4b478389.txn  6-efd99ede-6f93-42da-bb4f-b6cba0c610d9.txn
data/lancedb/table.lance/data/: c360aab8-772f-43ff-b12d-cd325f20f55d.lance
data/reports/: 1.txt  2.txt  3.txt
notebooks/: embed_reports_lance_embed.ipynb  embed_reports_manual_embed.ipynb
scripts/: README.md  common.py  findings.py  generate_finding_outline.py  generate_finding_outline_with_context.py  get_finding_description.py  ingest.py  ingest_reports.py  list_finding_models.py  query_llm.py  report.py  search.py  search_reports.py  test_ollama.py
src/api/: db_setup.py  main.py
src/api/routers/: README.md  __init__.py  finding_model_router.py  llm_router.py  report_router.py  search_router.py
src/reportfindingrefiner/: __init__.py  config.py  data_models.py  finding_model.py  ingestion.py  lance_db.py  llm_query.py  mongo_db.py  search.py  search_debug_test.py  section_splitter.py
src/reportfindingrefiner/models/: finding_model.py
src/reportfindingrefiner/prompt_templates/: get_finding_description.md.jinja  get_finding_model_from_outline.md.jinja  get_finding_model_with_context.md.jinja
src/reportfindingrefiner/services/: README.md  __init__.py  finding_model_service.py  finding_model_tools.py  ingestion.py  llm_query.py  llm_service.py  report_service.py  search.py  search_service.py
