[project]
name = "reportfindingrefiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "lancedb>=0.17.0",
    "ollama>=0.4.5",
    "pandas>=2.2.3",
    "protobuf>=5.29.2",
    "pydantic>=2.10.4",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
]
